# dora-examples

./: .gitignore  .gitmodules  Cargo.toml  README.md  RELEASE.md
.github/workflows/: url-example.yml
examples/: .gitignore  README.md
examples/aloha/: gym-graph.html
examples/av1-encoding/: README.md  dataflow.yml  dataflow_distributed.yml
examples/c-dataflow/: counter.c  dataflow.yml  main.rs  node.c  sink.c
examples/camera/: README.md  dataflow.yml  dataflow_jupyter.yml
examples/cmake-dataflow/: .gitignore
examples/customed-ros2-dataflow/: .gitignore  README.md  dataflow.yml  dataflow_action.yml  main.rs
examples/customed-ros2-dataflow/customed_interfaces/: CMakeLists.txt  package.xml
examples/customed-ros2-dataflow/customed_nodes/: CMakeLists.txt  package.xml
examples/customed-ros2-dataflow/customed_nodes/src/: add_client.cpp  add_service.cpp  fib_client.cpp  fib_server.cpp
examples/customed-ros2-dataflow/dora_nodes/: Cargo.toml
examples/customed-ros2-dataflow/dora_nodes/src/: dora_action_client.rs  dora_server.rs
examples/cxx-arrow-dataflow/: .gitignore  main.rs
examples/cxx-dataflow/: README.md  dataflow.yml  main.rs
examples/cxx-dataflow/node-c-api/: main.cc
examples/cxx-ros2-dataflow/: .gitignore  main.rs
examples/depth_camera/: README.md
examples/franka/: README.md  RELEASE.md  dataflow.yml  franka_driver_node.py  goal_publisher_node.py  requirements.txt
examples/lebai/: LM3_test.py  README.md  RELEASE.md  dataflow.yml  goal_publisher_node.py  lebai_driver_node.py  requirements.txt
examples/llm/: README.md
examples/mediapipe/: README.md  dataflow.yml
examples/multiple-daemons/: dataflow.yml  main.rs  tmp.txt  tmp2.txt  zenoh_setting.json
examples/object-detection/: README.md
examples/openai-server/: dataflow-test.yml  dataflow.yml
examples/pyarrow-test/: dataflow.yml
examples/python-dataflow/: dataflow.yml  main.rs
examples/python-distributed-zenoh/: README.md  cloud_node.py  dataflow.yml  dataflow_distributed.yml  requirements.txt  run_local.sh  sensor_node.py  test_simple.sh  zenoh_config.json5
examples/python-zenoh-dataflow/: .gitignore  README.md  dataflow.yml  dora_node.py  requirements.txt  zenoh_app.py
examples/rerun-viewer/: README.md  dataflow.yml
examples/rust-dataflow/: dataflow.yml  dataflow_dynamic.yml  main.rs
examples/rust-dataflow-git/: .gitignore  main.rs
examples/rust-dataflow-url/: dataflow.yml  main.rs
examples/rust-ros2-dataflow/: dataflow.yml  main.rs
examples/rust-ros2-dataflow/node/: Cargo.toml
examples/rust-ros2-dataflow/node/src/: main.rs
examples/rust-zenoh-dataflow/: dataflow.yml
examples/rust-zenoh-dataflow/dora-node/: Cargo.toml
examples/rust-zenoh-dataflow/dora-node/src/: main.rs
examples/rust-zenoh-dataflow/zenoh-app/: Cargo.toml
examples/so101/: README.md  RELEASE.md  dataflow.yml  goal_publisher_node.py  requirements.txt  so101_driver_node.py
examples/speech-to-speech/: README.md  kokoro-dev.yml  outtetts-dev.yml
examples/speech-to-text/: .gitignore
examples/tracker/: README.md  facebook_cotracker.yml  pyproject.toml  qwenvl_cotracker.yml
examples/tracker/dora_cotracker/: __init__.py  main.py
examples/translation/: README.md
examples/ur5/: README.md  RELEASE.md  dataflow.yml  goal_publisher_node.py  requirements.txt  test_connection.py  ur5_driver_node.py
examples/vehicle-mapping/: README.md  dataflow_mapping.yml  requirements.txt
examples/vehicle-mapping/config/: mapping_config.yaml
examples/vehicle-mapping/data/demo_sequence/: 000001.pcd
examples/vehicle-mapping/data/rectangle_sequence/: frame_0000.pcd  frame_0001.pcd  frame_0002.pcd  frame_0003.pcd  frame_0004.pcd  frame_0005.pcd  frame_0006.pcd  frame_0007.pcd  frame_0008.pcd  frame_0009.pcd  frame_0010.pcd  frame_0011.pcd  frame_0012.pcd  frame_0013.pcd  frame_0014.pcd  frame_0015.pcd  frame_0016.pcd  frame_0017.pcd  frame_0018.pcd  frame_0019.pcd  frame_0020.pcd  frame_0021.pcd  frame_0022.pcd  frame_0023.pcd  frame_0024.pcd  frame_0025.pcd  frame_0026.pcd  frame_0027.pcd  frame_0028.pcd  frame_0029.pcd  frame_0030.pcd  frame_0031.pcd  frame_0032.pcd  frame_0033.pcd  frame_0034.pcd  frame_0035.pcd  frame_0036.pcd  frame_0037.pcd  frame_0038.pcd  ground_truth_poses.npy  (+1 more)
examples/vehicle-mapping/data/synthetic_sequence/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd  000006.pcd  000007.pcd  000008.pcd  000009.pcd  000010.pcd  000011.pcd  000012.pcd  000013.pcd  000014.pcd  000015.pcd  000016.pcd  000017.pcd  000018.pcd  000019.pcd  ground_truth_poses.npy
examples/vehicle-mapping/output/dora_map/: map.pcd  map.ply  trajectory.txt  waypoints.txt
examples/vehicle-mapping/output/rectangle_test/: map.pcd  trajectory.txt  waypoints.txt
examples/vehicle-mapping/output/synthetic_test/: map.pcd  map.ply  odometry_poses.npy  trajectory.txt  waypoints.txt  waypoints_dense.txt
examples/vehicle-mapping/scripts/: generate_synthetic_sequence.py  run_pipeline.py  visualize_map.py
examples/vehicle-mapping/src/: kiss_icp_runner.py  loop_detector.py  map_builder.py  pcd_loader.py  pose_graph.py  simple_icp.py  waypoint_extractor.py
examples/vehicle-mapping/src/operators/: __init__.py  icp_odometry_op.py  map_builder_op.py  map_visualizer_op.py  pcd_source_op.py  waypoint_extractor_op.py
examples/vehicle-path-following/: README.md  dataflow_sim.yml
examples/vehicle-path-following/config/: sim_config.yaml  vehicle_params.yaml
examples/vehicle-path-following/data/: mapped_dense.txt  mapped_medium.txt  mapped_trajectory_simple.txt  sample_waypoints.txt
examples/vehicle-path-following/src/: bicycle_model.py  imu_synthesizer.py  sim_visualizer.py  simple_planner.py
examples/vlm/: README.md  qwen2-5-vl-vision-only-dev.yml
examples/zenoh-dataflow/: .gitignore  README.md  dataflow.yml  main.rs
examples/zenoh-dataflow/dora-node/: Cargo.toml
examples/zenoh-dataflow/zenoh-app/src/: main.rs
nodes/random-node/: Cargo.toml
nodes/sink-dynamic-node/: Cargo.toml
nodes/sink-dynamic-node/src/: main.rs
nodes/sink-node/: Cargo.toml
nodes/status-node/: Cargo.toml
