[workspace]
resolver = "3"
members = [
    "nodes/random-node",
    "nodes/sink-node",
    "nodes/status-node",
    "nodes/sink-dynamic-node",
]

[package]
name = "dora-examples"
autoexamples = true
edition = "2024"

[dev-dependencies]
eyre = "0.6.8"
tokio = { version = "1.24.2", features = ["full"] }
dora-tracing = { git = "https://github.com/dora-rs/dora.git", rev = "77c277910b0ce87b902faa1ab369a33cbcd555f4" }
dunce = "1.0.2"
tracing = "0.1.36"

port_check = "0.3"
