[package]
name = "dora_nodes"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "dora-server"
path = "src/dora_server.rs"

[dependencies]
dora-node-api = { git = "https://github.com/dora-rs/dora.git", rev = "77c277910b0ce87b902faa1ab369a33cbcd555f4"}
eyre = "0.6.8"
futures = { version = "0.3.21", features = ["thread-pool"] }
futures-timer = "3.0.3"
rand = "0.8.5"
tokio = { version = "1.24.2", features = ["rt", "macros"] }
dora-ros2-bridge = { git = "https://github.com/dora-rs/dora.git" }
serde_json = "1.0.99"
