[package]
name = "dora-node"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
dora-node-api = { git = "https://github.com/dora-rs/dora.git", rev = "77c277910b0ce87b902faa1ab369a33cbcd555f4"}
eyre = "0.6.8"
futures = { version = "0.3.31", features = ["thread-pool"] }
futures-timer = "3.0.3"
rand = "0.9.2"
zenoh = "1.5"
